# gitlab-project-doctor

./: Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.fr.md  README.md  git_list.sh
.github/workflows/: ci.yml  release.yml
i18n/en-GB/: gitlab_project_doctor.ftl
i18n/fr-FR/: gitlab_project_doctor.ftl
src/: api.rs  cli.rs  diagnosis.rs  main.rs
src/api/: packages.rs  registry.rs
src/api/registry/: repositories.rs  tag.rs
src/diagnosis/: artifact_size.rs  conf_analysis.rs  container_analysis.rs  gitlab_connection.rs  gitlab_storage.rs  global_storage.rs  job_analysis.rs  package_analysis.rs  package_clean.rs  package_size.rs  pipeline_analysis.rs  pipeline_clean.rs  repo_size.rs
src/graphql/: conf_package_duplicate.graphql  gitlab_schema_min.json
