[package]
name = "gitlab-forge-doctor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.20"
console = "0.15.1"
futures = "0.3.21"
git2 = "0.15.0"
gitlab = "0.1502.0"
human_bytes = "0.3.1"
indicatif = "0.17.0"
rand = "0.8.5"
regex = "1.6.0"
serde = "1.0.142"
structopt = "0.3.26"
