[package]
name = "gitlab-project-doctor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.20"
console = "0.15.1"
derive_builder = "0.11.2"
dialoguer = "0.10.2"
git2 = "0.15.0"
gitlab = "0.1502.0"
human_bytes = "0.3.1"
indicatif = "0.17.0"
lazy_static = "1.4.0"
regex = "1.6.0"
serde = "1.0.142"
structopt = "0.3.26"

